# Rover

./: LICENSE  README.md
src/core/: CMakeLists.txt  package.xml
src/core/src/: core.cpp  core.hpp  main.cpp
src/drive/: package.xml  setup.py
src/drive/drive/: drive.py
src/gnss/: package.xml  setup.py
src/interfaces/auto_interfaces/: CMakeLists.txt  package.xml
src/interfaces/core_interfaces/: CMakeLists.txt  package.xml
src/interfaces/core_interfaces/include/core_interfaces/: Types.hpp
src/interfaces/core_interfaces/msg/: Heartbeat.msg
src/interfaces/core_interfaces/srv/: HeartbeatConnect.srv
src/interfaces/drive_interfaces/: CMakeLists.txt  package.xml
src/interfaces/drive_interfaces/include/drive_interfaces/: Types.hpp
src/interfaces/drive_interfaces/msg/: DriveCommand.msg
src/interfaces/gnss_interfaces/: CMakeLists.txt  package.xml
