<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drive</name>
  <version>0.2.0</version>
  <description>Driving system interop.</description>
  <maintainer email="57426668+BruhSoundEffectNumber2@users.noreply.github.com">damon</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>drive_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
